[Update] Header complete

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,16 @@
-<p>header works!</p>
+<div class="header-container">
+
+
+  <div class="logo">
+    <h1>SAMIR RADEMAKERS</h1>
+  </div>
+
+
+  <div class="nav-container">
+    <h1>About me</h1>
+    <h1>Projects</h1>
+    <h1>Skills</h1>
+    <h1>Contact</h1>
+  </div>
+
+</div>
