--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -3,6 +3,7 @@
   width: 100%;
   height: 115px;
   background-color: rgba(33,32,33,255);
+  box-shadow:0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !important;
 
   display: flex;
   justify-content: space-between;
@@ -12,7 +13,6 @@
 
 .logo{
   color: white;
-  font-size: 40px;
   cursor: pointer;
 }
 
@@ -20,11 +20,17 @@
   padding: 0px;
   margin: 0px;
   font-size: 50px;
+  transition: all 0.3s ease 0s;
 }
 
-.logo h1 span{
-  color: rgb(130, 241, 255);
+.logo h1 a{
+  color: rgba(0, 249, 255, 0.9);
 }
+
+.logo h1:hover{
+  font-size: 54px;
+}
+
 
 .nav-container h1{
   display: inline-block;
@@ -37,8 +43,6 @@
 
 .nav-container h1:hover{
   font-size: 34px;
+  color: rgba(0, 249, 255, 0.9);
 }
 
-.contact-button{
-  width: 1px;
-}
