--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -1,3 +1,35 @@
-.front-image{
-  width: 100%;
+.main-container{
+  font-family: 'Average Sans', sans-serif;
+  padding: 20px;
+  margin: 80px auto;
+  background-color: rgba(33,32,33,255);
+  box-shadow:0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !important;
+  width: 1300px;
+  display: flex;
+  justify-content: left;
 }
+
+.profile-image{
+  width: 500px;
+  /*float: left;*/
+}
+
+.info-container{
+  color: white;
+  /*float: left;*/
+  margin-left: 30px;
+}
+
+.info-container h1{
+  font-size: 80px;
+}
+
+.info-container h2{
+  font-size: 30px;
+  margin-top: 20px;
+}
+
+.info-container h3{
+  margin: 0px;
+}
+
