[Update] Added projects

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,14 +2,14 @@
 
 
   <div class="logo">
-    <h1>SAMIR<a>RADEMAKERS</a></h1>
+    <h1 (click)="toHomePage()">SAMIR<a>RADEMAKERS</a></h1>
   </div>
 
 
   <div class="nav-container">
     <h1>About me</h1>
-    <h1>Projects</h1>
-    <h1>Skills</h1>
+    <h1 (click)="toProjectsPage()">Projects</h1>
+    <h1 (click)="toSkillsPage()">Skills</h1>
     <h1>Contact</h1>
   </div>
 
