--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -5,13 +5,16 @@
   <img class="profile-image" src="https://cdn.discordapp.com/attachments/616314074547879938/980916477152624690/pf2_-_Copy_2.jpg" alt="img">
 
    <div class="info-container">
+     <h3>Welcome! I am:</h3>
      <h1>Samir Rademakers</h1>
 
      <h2>‍💻: Full Stack Developer</h2>
 
+     <mat-divider></mat-divider>
+     <h2>📖: Technical Computer Science Major</h2>
 
      <mat-divider></mat-divider>
-     <h2>📖: Computer Science Major</h2>
+     <h2>🎓: Avans Hogeschool Breda, Bachelor Degree</h2>
 
      <mat-divider></mat-divider>
      <h2>🎁: 26/09/2002</h2>
@@ -21,9 +24,6 @@
 
      <mat-divider></mat-divider>
      <h2>📍: Breda, The Netherlands</h2>
-
-     <mat-divider></mat-divider>
-     <h2>🎓: Avans Hogeschool Breda, Bachelor Degree</h2>
 
      <mat-divider></mat-divider>
      <h2>📧: samir.rademakers@gmail.com</h2>
