[Update] Added on init routing

--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -1,3 +1,9 @@
+@import url('http://fonts.cdnfonts.com/css/boomer-tantrum');
+@import url('http://fonts.cdnfonts.com/css/jane-roe');
+@import url('http://fonts.cdnfonts.com/css/average-sans');
+@import url('http://fonts.cdnfonts.com/css/b612-mono');
+
+
 .main-container{
   font-family: 'Average Sans', sans-serif;
   padding: 20px;
