--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
-@import url('http://fonts.cdnfonts.com/css/boomer-tantrum');
-@import url('http://fonts.cdnfonts.com/css/jane-roe');
-@import url('http://fonts.cdnfonts.com/css/average-sans');
-@import url('http://fonts.cdnfonts.com/css/b612-mono');
+@import url('//fonts.cdnfonts.com/css/boomer-tantrum');
+@import url('//fonts.cdnfonts.com/css/jane-roe');
+@import url('//fonts.cdnfonts.com/css/average-sans');
+@import url('//fonts.cdnfonts.com/css/b612-mono');
 
 
 
