--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,6 +3,8 @@
 
   <div class="logo">
     <h1 (click)="toHomePage()">SAMIR<a>RADEMAKERS</a></h1>
+    <h2> <a>Full stack</a> developer</h2>
+
   </div>
 
 
