--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,8 @@
 @import url('//fonts.cdnfonts.com/css/jane-roe');
 @import url('//fonts.cdnfonts.com/css/average-sans');
 @import url('//fonts.cdnfonts.com/css/b612-mono');
+@import url('//fonts.cdnfonts.com/css/birica');
+@import url('//fonts.cdnfonts.com/css/pauschal');
 
 
 
