[Update] Added skills

--- a/src/app/components/aboutme/aboutme.component.html
+++ b/src/app/components/aboutme/aboutme.component.html
@@ -9,14 +9,18 @@
 
     <div class="about-me-info-container">
 
-      <h3>My name is Samir Rademakers, I am originally from a place called Hellevoetsluis but now I live in Breda, The Netherlands. In
-        secondary school I graduated at HAVO level with bilingual language education. This means
-        that most of my time at secondary school, my education was given to me fully in English
-        instead of in Dutch. I also got a Cambridge and IB certificate for this.
-        From a very young age I have always been interested in computers and in the last two years
-        of secondary school I also chose to take computer science as an extra subject. After that I
+      <h3>My name is Samir Rademakers, I am 19 years old and I am from The Netherlands. When I was 16 years old I moved out to study
+        technical computer science in Breda, a city in The Netherlands about an hour away from my hometown. Before I started studying I
+        graduated highschool with bilingual education, therefore my English is almost as good as my Dutch.
+      </h3>
+      <h3>From a very young age I have always been interested in computers and in the last two years
+        of highschool I also chose to take computer science as an extra subject. After that I
         started studying technical computer science at Avans Hogeschool in Breda. Ever since I
-        started studying this, I discovered that I have a true passion for developing software.
+        started studying computer science, I discovered that I have a true passion for developing software.
+      </h3>
+      <h3>
+        In my free time I like to play games, hang out with friends, go out, do fitness and travel. Also in my free time I like to work
+        on my own computer science related projects. One of those projects for example is this website :).
       </h3>
 
 
@@ -25,11 +29,11 @@
         <mat-divider></mat-divider>
         <h3>○ 2014-2019: Highschool</h3>
         <h4>Senior general secondary education</h4>
-        <h4>School: Jacob van Liesveldt</h4>
+        <h4>School: Jacob van Liesveldt, Hellevoetsluis</h4>
         <mat-divider></mat-divider>
         <h3>○ 2019-2023: University</h3>
         <h4>Technical Computer Science Bachelor Degree</h4>
-        <h4>School: Avans Hogeschool</h4>
+        <h4>School: Avans Hogeschool, Breda</h4>
         <mat-divider></mat-divider>
       </div>
 
@@ -49,9 +53,9 @@
       <div class="genre-info-container">
         <h2>Certificates</h2>
         <mat-divider></mat-divider>
-        <h3>○ Senior TTO certificate</h3>
+        <h3>○ Junior Bilingual Education certificate</h3>
         <mat-divider></mat-divider>
-        <h3>○ Junior TTO certificate</h3>
+        <h3>○ Senior Bilingual Education certificate</h3>
         <mat-divider></mat-divider>
         <h3>○ Cambridge English Level 1 certificate</h3>
         <mat-divider></mat-divider>
