--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,10 +9,10 @@
 
 
   <div class="nav-container">
-    <h1 id="aboutMeButton" class="nav-button selected-button" (click)="toAboutmePage()"> About me</h1>
-    <h1 id="projectsButton" class="nav-button" (click)="toProjectsPage()">Projects</h1>
-    <h1 id="skillButton" class="nav-button" (click)="toSkillsPage()">Skills</h1>
-    <h1 id="contactButton" class="nav-button" (click)="toContactPage()">Contact</h1>
+    <h1 class="nav-button selected-button" (click)="toAboutmePage()"> About me</h1>
+    <h1 class="nav-button" (click)="toProjectsPage()">Projects</h1>
+    <h1 class="nav-button" (click)="toSkillsPage()">Skills</h1>
+    <h1 class="nav-button" (click)="toContactPage()">Contact</h1>
   </div>
 
 </div>
