--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,8 @@
 @import url('//fonts.cdnfonts.com/css/b612-mono');
 @import url('//fonts.cdnfonts.com/css/birica');
 @import url('//fonts.cdnfonts.com/css/pauschal');
+@import url('http://fonts.cdnfonts.com/css/hacuia');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 
 
