--- a/src/app/components/aboutme/aboutme.component.css
+++ b/src/app/components/aboutme/aboutme.component.css
@@ -1,5 +1,5 @@
 .aboutme-container{
-  font-family: 'pauschal', sans-serif;
+  font-family: 'Hacuia', sans-serif;
   color: white;
   width: 2320px;
   height: 980px;
@@ -17,22 +17,28 @@
 .aboutme-container h1{
   color: rgba(0, 249, 255, 0.9);
   font-family: 'Boomer Tantrum', sans-serif;
-
-  font-size: 80px;
+  font-size: 70px;
 }
 
 .aboutme-container h2{
   font-family: 'Boomer Tantrum', sans-serif;
-
   color: rgba(0, 249, 255, 0.9);
-  font-size: 40px;
-}
-
-.aboutme-container h3{
   font-size: 30px;
 }
 
+.aboutme-container h3{
+  margin-bottom: 10px;
+  font-size: 25px;
+}
+
+.aboutme-container h4{
+  font-size: 21px;
+}
+
 .profile-image{
+  border-width: 10px;
+  border-style: solid;
+  /*border-color: gold;*/
   width: 600px;
   float: right;
   margin-top: 20px;
@@ -51,6 +57,9 @@
   width: 500px;
   height: 500px;
   background-color: rgba(42,41,42,255);
+  /*background-color: rgb(221,45,74);*/
+  box-shadow:0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !important;
+
 }
 
 .genre-info-container h3{
