--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -1,6 +1,6 @@
 .main-container{
-  font-family: 'Average Sans', sans-serif;
   padding: 20px;
+  font-family: 'Hacuia', sans-serif;
   margin: 80px auto;
   background-color: rgba(33,32,33,255);
   box-shadow:0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !important;
@@ -25,8 +25,10 @@
 }
 
 .info-container h2{
-  font-size: 40px;
+  font-size: 36px;
   margin-top: 20px;
+  display: flex !important;
+  align-items: center !important;
 }
 
 .info-container h3{
@@ -55,5 +57,12 @@
 
 .email:hover .tooltiptext {
   visibility: visible;
+}
+
+.mat-icon{
+  font-size: 45px !important;
+  height: 100%;
+  width: 50px;
+  margin-right: 5px
 }
 
