--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,1 +1,22 @@
-<div class="contact-container"></div>
+<div class="contact-container">
+
+
+  <div class="contact-list-container">
+
+    <h1>EMAIL</h1>
+    <h2>samir.rademakers@gmail.com</h2>
+
+
+    <mat-divider></mat-divider>
+
+    <h1>LinkedIn</h1>
+    <a href="https://www.linkedin.com/in/samir-rademakers-69a4a71bb/?original_referer=">Samir Rademakers</a>
+    <mat-divider></mat-divider>
+
+    <h1>Phone Number</h1>
+    <h2>06 55 70 71 50</h2>
+    <mat-divider></mat-divider>
+
+  </div>
+
+</div>
