[Update] Changed header titles

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,9 +17,9 @@
 
   <nav>
     <ul>
-      <li><h1 (click)="toAboutmePage()">Home</h1></li>
+      <li><h1 (click)="toAboutmePage()">About me</h1></li>
       <li><h1 (click)="toProjectsPage()">Projects</h1></li>
-      <li><h1 (click)="toSkillsPage()">Pricing</h1></li>
+      <li><h1 (click)="toSkillsPage()">Skills</h1></li>
       <li><h1 (click)="toContactPage()">Contact</h1></li>
     </ul>
   </nav>
